--- a/project-styles.css
+++ b/project-styles.css
@@ -27,6 +27,9 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .veil {
@@ -79,7 +82,7 @@ body {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-50%);
+        transform: translateX(-16.666%);
     }
 }
 
@@ -154,10 +157,10 @@ body {
     transform: scale(1.1);
 }
 
-.volume-btn img {
+.volume-btn svg {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    color: #fff;
 }
 
 .volume-slider {
